--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -1,6 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Hotel</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hotel">Hotel</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="hotel">Отель</string>
 </resources>
