--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Hotel</string>
     <string name="hotel">Hotel</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="choose_room">Choose room</string>
 </resources>
