--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -4,4 +4,5 @@
     <string name="hotel">Hotel</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="choose_room">Choose room</string>
+    <string name="_super" translatable="false">Super!</string>
 </resources>
