--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hotel">Отель</string>
     <string name="choose_room">К выбору номера</string>
+    <string name="_super">Супер!</string>
 </resources>
