added getting data from API, arch for hotel screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="essentials">Essentials</string>
     <string name="included">What\'s included</string>
     <string name="not_included">What is not included</string>
+    <string name="image">image</string>
 </resources>
