--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,5 @@
     <string name="essentials">Самое необходимое</string>
     <string name="included">Что включено</string>
     <string name="not_included">Что не включено</string>
+    <string name="image">Изображение</string>
 </resources>
