--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Отель</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hotel">Отель</string>
-    <string name="choose_room">К выбору номера</string>
+    <string name="choose_room">Выбрать номер</string>
     <string name="_super">Супер!</string>
     <string name="about_hotel">Об отеле</string>
     <string name="facilities">Удобства</string>
@@ -11,4 +11,5 @@
     <string name="included">Что включено</string>
     <string name="not_included">Что не включено</string>
     <string name="image">Изображение</string>
+    <string name="more_about_room">Подробнее о номере</string>
 </resources>
