--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="included">What\'s included</string>
     <string name="not_included">What is not included</string>
     <string name="image">image</string>
+    <string name="more_about_room">More about room</string>
 </resources>
